--- a/UltimateStatsWebApp/Views/Home/Index.cshtml
+++ b/UltimateStatsWebApp/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about Austin Dale's intramural ultimate statistics here</a>.</p>
+    <p>Learn about Ultimate Frisbee intramural ultimate statistics here.</p>
+    <p>Log in to create your own statistics.</p>
 </div>
