--- a/UltimateStatsWebApp/Views/Shared/_Layout.cshtml
+++ b/UltimateStatsWebApp/Views/Shared/_Layout.cshtml
@@ -43,6 +43,8 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - UltimateStatsWebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <a href="https://github.com/AustinSoar/Personal-Projects">Github</a>
+            <a href="https://www.linkedin.com/in/austin-dale-0a6358258/">LinkedIn</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
