--- a/UltimateStatsWebApp/Views/Stats/Delete.cshtml
+++ b/UltimateStatsWebApp/Views/Stats/Delete.cshtml
@@ -47,6 +47,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.OpponentScore)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.userName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.userName)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
