--- a/UltimateStatsWebApp/Views/Stats/Index.cshtml
+++ b/UltimateStatsWebApp/Views/Stats/Index.cshtml
@@ -30,36 +30,55 @@
             <th>
                 @Html.DisplayNameFor(model => model.OpponentScore)
             </th>
+            <th>
+                
+                @Html.DisplayNameFor(model => model.userName)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Catches)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Throws)
-            </td>
-            <td>
-                 @Html.DisplayFor(modelItem => item.GameNumber)
-            </td>
-            <td>
-                    @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td>
-                    @Html.DisplayFor(modelItem => item.TeamScore)
-            </td>
-            <td>
-                    @Html.DisplayFor(modelItem => item.OpponentScore)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            //@if (item.userName == User.Identity?.Name){
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Catches)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Throws)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.GameNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Category)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TeamScore)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.OpponentScore)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.userName)
+                    </td>
+                    <td>
+                        @{
+                            if (item.userName == User.Identity?.Name)
+                            {
+                                <a asp-action="Edit" asp-route-id="@item.Id" asp-route-userName="@item.userName">Edit</a>
+
+                            }
+                        }
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                        @if (item.userName == User.Identity?.Name)
+                        {
+                            <a asp-action="Delete" asp-route-id="@item.Id" asp-route-userName="@item.userName">Delete</a>
+                        }
+
             </td>
         </tr>
+    //}
 }
     </tbody>
 </table>
